# oh-my-kimi-python

./: README.md  pyproject.toml
.github/workflows/: publish.yml
src/oh_my_kimi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/oh_my_kimi_python.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/omk/: main.py
src/omk/core/: hud.py  launch.py  skills.py
src/omk/hooks/: agents_overlay.py
src/omk/mcp/: memory_server.py  state_server.py  team_server.py
src/omk/utils/: config.py  paths.py  tmux_manager.py
