[project]
name = "oh-my-kimi"
version = "0.1.0"
description = "A Python-based orchestrator for Kimi Code CLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "tomlkit>=0.12.0",
]

[project.scripts]
omk-py = "omk.main:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
